--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,18 @@ body{
   margin-bottom: 1rem;
   color: #e54;
 }
+
+.animais h2::before{
+  content: '';
+  display: inline-block;
+  width: 40px;
+  height: 10px;
+  margin-right: 10px;
+  background: #fb5;
+}
+
+.animais-lista{
+  height: 370px;
+  overflow-y: scroll;
+  grid-column: 2;
+}
