--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,24 @@
-body, ul, li, dt, dd, dl, p{
+body,
+ul,
+li,
+dt,
+dd,
+dl,
+p {
   padding: 0px;
   margin: 0px;
 }
 
-img{
-  display: block; 
- max-width: 100%;
+img {
+  display: block;
+  max-width: 100%;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-body{
+body {
   background: #faf6ed;
   color: #222;
   -webkit-font-smoothing: antialiased;
@@ -20,13 +26,13 @@ body{
   grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
 
-.menu{
+.menu {
   grid-column: 3 / 5;
   margin-top: 2rem;
   margin-bottom: 2rem;
   background: #fb5;
 }
- 
+
 .menu ul {
   display: flex;
   flex-wrap: wrap;
@@ -39,11 +45,11 @@ body{
   margin-right: 10px;
   color: #222;
   text-decoration: none;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.875rem;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 
 .grid-section {
@@ -58,7 +64,7 @@ body{
 }
 
 .titulo {
-  font-family: 'Playfair Display SC', georgia;
+  font-family: "Playfair Display SC", georgia;
   font-size: 6rem;
   line-height: 1;
   font-weight: bold;
@@ -72,17 +78,17 @@ body{
   margin-bottom: 1rem;
 }
 
-.animais h2{
-  font-family: Georgia, 'Times New Roman', Times, serif;
+.animais h2 {
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   margin-bottom: 1rem;
   color: #e54;
 }
 
-.animais h2::before{
-  content: '';
+.animais h2::before {
+  content: "";
   display: inline-block;
   width: 40px;
   height: 10px;
@@ -90,8 +96,40 @@ body{
   background: #fb5;
 }
 
-.animais-lista{
+.animais-lista {
   height: 370px;
   overflow-y: scroll;
   grid-column: 2;
+}
+
+.animais-lista::-webkit-scrollbar {
+  width: 18px;
+}
+
+.animais-lista::-webkit-scrollbar-thumb {
+  background: #fb5;
+  border-left: 4px solid #faf6ed;
+  border-right: 4px solid #faf6ed;
+}
+
+.animais-lista::-webkit-scrollbar-track{
+  background: #faf6ed;
+}
+
+.animais-descricao section{
+  grid-column: 3;
+  margin-bottom: 3rem;
+}
+
+.faq-lista{
+  grid-column: 2 / 4;
+}
+
+.faq-lista dt{
+  font-family: monospace;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-bottom: .5rem;
+  color: #e54;
 }
