aprendeizado de js, nota para o que aprendhoje: ndi hj

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ body {
   background: #fb5;
 }
 
+ .z{
+  background: #e54;
+}
+
 .copy p{
   padding: 20px;
   font-family: 'Courier New', Courier, monospace;
@@ -211,3 +215,4 @@ body {
     margin-bottom: 0px;
   }
 }
+
